# bare-metal-helpers

./: .gitignore  CMakeLists.txt  README.md
src/date-time/: date_time.c  date_time.h
src/fixed-point-int/: fixed_point_int.c  fixed_point_int.h
test/: test_date_time.cpp  test_fixed_point_int.cpp
